# 2dgameengine

./: .gitignore  CMakeLists.txt  main.cpp
src/: .vimspector.json  AssetMng.cpp  AssetMng.hpp  CMakeLists.txt  Component.hpp  Entity.cpp  Entity.hpp  EntityMng.cpp  EntityMng.hpp  Game.cpp  Game.h  Game.hpp  TextureMng.cpp  TextureMng.hpp
src/components/: Sprite.hpp  Transform.hpp
